updated about page for president

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -23,7 +23,7 @@
 		<div class="col-md-4 col-xs-12">
 			<div class="panel panel-default">
 				<div class="product-img">
-					INSERT IMAGE HERE
+					<%= image_tag("team/president.png") %>
 				</div>
 			</div>
 		</div>
@@ -40,7 +40,19 @@
 					<div class="textbody">
 						Rhett Amin
 					</div>
+					<div class="spacer5"></div>
+						<div class="textbody1">
+							Rhett is a 4th year Honours Computer Science student. He is involed in a variety 
+							aspects campus wide including academic, helping where he can to better the program
+							and the students, and musically, helping with the Mac Farmstand, and other clubs.<br>
+							As President, Rhett is responsible for the final decisions and direction of the club and its involvments in the school. He oversees all projects and events of the club.
+							<br>
+							You can get a hold of Rhett by clicking one of the links below!
 					<hr>
+			        <a href="https://www.linkedin.com/pub/rhett-amin/49/8b4/329" target="_blank"><%= image_tag("social/linkedin.png", height: "45px") %></a>
+			        <a href="http://twitter.com/bds_77" target="_blank"><%= image_tag("social/twitter.png", height: "45px") %></a>
+			        <a href="https://github.com/RhettAmin" target="_blank"><%= image_tag("social/github.png", height: "45px") %></a>
+			        <a href="mailto:rhettamin@gmail.com" target="_blank"><%= image_tag("social/email.png", height: "45px") %></a>
 				</div>
 			</div>
 		</div>
@@ -82,7 +94,7 @@
 		<div class="col-md-4">
 			<div class="panel panel-default">
 				<div class="product-img">
-					<%= image_tag("team/vpfinance.jpg") %>
+					<%= image_tag("team/vpfinance.png") %>
 				</div>
 			</div>
 		</div>
@@ -100,11 +112,11 @@
 						Brandon Da Silva
 					</div>
 					<div class="spacer5"></div>
-					<div class="textbody1">
-						Brandon is a 4th year Honours Business Informatics student. His involvements on campus spread far and wide including academic and athletics with <br>
-						As the VP Finance, Brandon is responsible for the budget and funding the Computer Science Society gets annually. He also oversees the majority of the projects and events that require funding.<br>
-						You can get a hold of Brandon by clicking one of the links below!
-					</div>
+						<div class="textbody1">
+							Brandon is a 4th year Honours Business Informatics student. His involvements on campus spread far and wide including academic and athletics with <br>
+							As the VP Finance, Brandon is responsible for the budget and funding the Computer Science Society gets annually. He also oversees the majority of the projects and events that require funding.<br>
+							You can get a hold of Brandon by clicking one of the links below!
+						</div>
 					<hr>
 					<!-- LINKS -->
 			        <a href="http://www.brandondasilva.com" target="_blank"><%= image_tag("social/url.png", height: "45px") %></a>
