updated merch page, sweater panel

--- a/app/views/pages/merch.html.erb
+++ b/app/views/pages/merch.html.erb
@@ -56,7 +56,13 @@
 				</div>
 
 				<div class="panel-body">
-
+					<div class="textbody">
+					Sweaters come in two variations: <br>
+						1) Standard black TShirt with CSS logo screen printed on the front, and no text on the back.<br>
+						2) Standard black TShirt with CSS logo screen printed on the front, and custom text on the back.<br>
+						Sizes: S, M, L, XL<br><br>
+						To order, place an order via the email here:  <a href="mailto:dasilvbc@mcmaster.ca" target="_blank"><%= image_tag("social/email.png", height: "45px") %></a>
+					</div>
 				</div>
 			</div>
 		</div>
