--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,6 @@
 <div class="container hidden-xs hidden-sm">
 	<div class="page-header">
-		<h1>CSS Executive Team</h1>
+		<h1>SS Executive Team</h1>
 	</div>
 	
 	<div class="row">
