Added placeholder images for about page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,6 @@
 <div class="container hidden-xs hidden-sm">
 	<div class="page-header">
-		<h1>SS Executive Team</h1>
+		<h1>CSS Executive Team</h1>
 	</div>
 	
 	<div class="row">
@@ -81,7 +81,7 @@
 		<div class="col-md-4 col-xs-12">
 			<div class="panel panel-default">
 				<div class="product-img">
-					INSERT IMAGE HERE
+					<%= image_tag("team/placeholder_person.png") %>
 				</div>
 			</div>
 		</div>
@@ -152,7 +152,7 @@
 		<div class="col-md-4 col-xs-12">
 			<div class="panel panel-default">
 				<div class="product-img">
-					INSERT IMAGE HERE
+					<%= image_tag("team/placeholder_person.png") %>
 				</div>
 			</div>
 		</div>
@@ -165,7 +165,7 @@
 		<div class="col-md-4 col-xs-12">
 			<div class="panel panel-default">
 				<div class="product-img">
-					INSERT IMAGE HERE
+					<%= image_tag("team/placeholder_person.png") %>
 				</div>
 			</div>
 		</div>
@@ -210,7 +210,7 @@
 		<div class="col-md-4 col-xs-12">
 			<div class="panel panel-default">
 				<div class="product-img">
-					INSERT IMAGE HERE
+					<%= image_tag("team/placeholder_person.png") %>
 				</div>
 			</div>
 		</div>
@@ -223,7 +223,7 @@
 		<div class="col-md-4 col-xs-12">
 			<div class="panel panel-default">
 				<div class="product-img">
-					INSERT IMAGE HERE
+					<%= image_tag("team/placeholder_person.png") %>
 				</div>
 			</div>
 		</div>
@@ -268,7 +268,7 @@
 		<div class="col-md-4 col-xs-12">
 			<div class="panel panel-default">
 				<div class="product-img">
-					INSERT IMAGE HERE
+					<%= image_tag("team/placeholder_person.png") %>
 				</div>
 			</div>
 		</div>
@@ -281,7 +281,7 @@
 		<div class="col-md-4 col-xs-12">
 			<div class="panel panel-default">
 				<div class="product-img">
-					INSERT IMAGE HERE
+					<%= image_tag("team/placeholder_person.png") %>
 				</div>
 			</div>
 		</div>
@@ -342,7 +342,7 @@
 		<div class="col-sm-4 col-xs-6">
 			<div class="panel panel-default">
 				<div class="product-img">
-					INSERT IMAGE HERE
+					<%= image_tag("team/placeholder_person.png") %>
 				</div>
 			</div>
 		</div>
@@ -372,7 +372,7 @@
 		<div class="col-sm-4 col-xs-6">
 			<div class="panel panel-default">
 				<div class="product-img">
-					INSERT IMAGE HERE
+					<%= image_tag("team/placeholder_person.png") %>
 				</div>
 			</div>
 		</div>
@@ -443,7 +443,7 @@
 		<div class="col-sm-4 col-xs-6">
 			<div class="panel panel-default">
 				<div class="product-img">
-					INSERT IMAGE HERE
+					<%= image_tag("team/placeholder_person.png") %>
 				</div>
 			</div>
 		</div>
@@ -472,7 +472,7 @@
 		<div class="col-sm-4 col-xs-6">
 			<div class="panel panel-default">
 				<div class="product-img">
-					INSERT IMAGE HERE
+					<%= image_tag("team/placeholder_person.png") %>
 				</div>
 			</div>
 		</div>
@@ -501,7 +501,7 @@
 		<div class="col-sm-4 col-xs-6">
 			<div class="panel panel-default">
 				<div class="product-img">
-					INSERT IMAGE HERE
+					<%= image_tag("team/placeholder_person.png") %>
 				</div>
 			</div>
 		</div>
@@ -530,7 +530,7 @@
 		<div class="col-sm-4 col-xs-6">
 			<div class="panel panel-default">
 				<div class="product-img">
-					INSERT IMAGE HERE
+					<%= image_tag("team/placeholder_person.png") %>
 				</div>
 			</div>
 		</div>
@@ -559,7 +559,7 @@
 		<div class="col-sm-4 col-xs-6">
 			<div class="panel panel-default">
 				<div class="product-img">
-					INSERT IMAGE HERE
+					<%= image_tag("team/placeholder_person.png") %>
 				</div>
 			</div>
 		</div>
@@ -588,7 +588,7 @@
 		<div class="col-sm-4 col-xs-6">
 			<div class="panel panel-default">
 				<div class="product-img">
-					INSERT IMAGE HERE
+					<%= image_tag("team/placeholder_person.png") %>
 				</div>
 			</div>
 		</div>
